doc: fix swagger generated documentation
